[package]
name = "jenr"
version = "0.1.0"
authors = ["Fernando Mez <fermezz@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.2.10"
env_logger = "0.6.2"
failure = "0.1.5"
jenkins_api = "0.5.2"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
serde_json = "1.0"
serde = "1.0.97"
